# workout-assistant

./: .env.dev.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: deploy_aws.yaml
src/: .env.example  entrypoint.sh
src/calendary/: apps.py  forms.py  models.py  urls.py  views.py
src/calendary/migrations/: 0001_initial.py  0002_rename_calendary_event.py  0003_rename_start_date_event_start_time.py  0004_event_trainings.py  0005_event_user.py  0006_alter_event_user.py  0007_rename_end_time_event_date_remove_event_start_time.py  0008_event_is_done.py
src/core/: settings.py  urls.py
src/dashboard/: urls.py  views.py
src/exercises/: admin.py  forms.py  models.py  urls.py  views.py
src/exercises/migrations/: 0001_initial.py  0002_exercise_reps.py  0003_remove_exercise_reps.py  0004_alter_exercise_category.py  0005_alter_exercise_options_exercise_created_at.py  0006_alter_exercise_category.py
src/static/: base.css
src/static/home_gif/: workout-gym.gif:Zone.Identifier
src/static/sounds/: alert-sound.mp3:Zone.Identifier
src/templates/: _base.html  _base_old.html  home.html  signup.html
src/templates/calendary/: add_event.html  calendary_view.html  calendary_view_old.html  event_confirm_delete.html  event_detail.html  event_detail_old.html  event_form.html  event_form_old.html  hx_calendary_view.html  hx_event_detail.html  hx_event_form.html
src/templates/dashboard/: _summary.html  _summary_new.html  home.html
src/templates/exercises/: _exercises_table.html  exercise_confirm_delete.html  exercise_detail.html  exercise_detail_old.html  exercise_form.html  exercises_list_old.html  hx_exercise_confirm_delete.html  hx_exercise_detail.html  hx_exercise_form.html  hx_exercises_list.html
src/templates/registration/: login.html
src/templates/trainings/: _training_event_detail.html  _trainings_table.html  hx_history.html  hx_training_exercise_form.html  hx_training_exercise_list.html  hx_training_exercise_rep_add.html  hx_training_exercise_rep_edit.html  hx_trainings_list.html  training_confirm_delete.html  training_detail.html  training_edit.html  training_event_detail.html  training_event_detail_old.html  training_event_detail_old_old.html  training_form.html  trainings_list.html
src/templates/users/: edit_profile.html  hx_profile_view.html  login.html  profile_view.html  signup.html
src/templatetags/: custom.py
src/trainings/: admin.py  forms.py  hx_views.py  models.py  services.py  urls.py  views.py
src/trainings/migrations/: 0001_initial.py  0002_remove_trainings_training_date.py  0003_training_delete_trainings.py  0004_alter_training_category.py  0005_remove_training_exercises_trainingexercise_and_more.py  0006_alter_training_exercises.py  0007_alter_trainingexercise_options_and_more.py  0008_category_remove_training_category_and_more.py  0009_remove_category_name_category_category_and_more.py  0010_remove_training_category_delete_category.py  0011_category_training_category.py  0012_remove_training_category_training_categories.py  0013_alter_trainingexercise_unique_together.py  0014_rename_categories_training_category.py  0015_alter_trainingexercise_reps.py  0016_alter_trainingexercise_reps.py  0017_alter_trainingexercise_options_and_more.py  0018_trainingexercise_user.py  0019_trainingexercise_is_done.py  0020_trainingexercise_history.py  0021_alter_trainingexercise_history.py  0022_trainingexercise_event_id.py  0023_alter_trainingexercise_event_id.py  0024_remove_trainingexercise_event_id_and_more.py  0025_alter_trainingexercise_training_exercise_event_id.py  0026_alter_trainingexercise_training_exercise_event_id.py  0027_remove_trainingexercise_training_exercise_event_id_and_more.py  0028_trainingexercise_reps_proposed.py
src/users/: admin.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_profile.py  0003_alter_profile_avatar_alter_profile_birth_date_and_more.py  0004_alter_profile_first_name_alter_profile_gender_and_more.py  0005_alter_profile_gender.py
