[tool.poetry]
name = "workout-assistant"
version = "0.1.0"
description = ""
authors = ["Adam  Włosik"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
